Draw frame of Z-Score graph.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -99,3 +99,116 @@ a {
     line-height: 1;
   }
 }
+
+svg.z-score {
+  .st0 {
+    fill: #231F20;
+  }
+
+  .st1 {
+    font-family: 'Nunito-SemiBold';
+  }
+
+  .st2 {
+    font-size: 9.5px;
+  }
+
+  .st3 {
+    fill: #424242;
+  }
+
+  .st4 {
+    fill: #FFFFFF;
+  }
+
+  .st5 {
+    opacity: 0.5;
+  }
+
+  .st6 {
+    fill: #00853F;
+  }
+
+  .st7 {
+    opacity: 0.5;
+    fill: #F9E100;
+  }
+
+  .st8 {
+    opacity: 0.5;
+    fill: #E31837;
+  }
+
+  .st9 {
+    opacity: 0.5;
+    fill: #00853F;
+  }
+
+  .st10 {
+    fill: none;
+    stroke: #77787B;
+    stroke-width: 0.8;
+  }
+
+  .st11 {
+    fill: #0297D6;
+  }
+
+  .st12 {
+    font-family: 'Nunito-Bold';
+  }
+
+  .st13 {
+    font-size: 26.5px;
+  }
+
+  .st14 {
+    letter-spacing: -1;
+  }
+
+  .st15 {
+    font-size: 14px;
+  }
+
+  .st16 {
+    font-size: 8px;
+  }
+
+  .st17 {
+    font-size: 12px;
+  }
+
+  .st18 {
+    fill: none;
+    stroke: #77787B;
+    stroke-width: 0.5;
+  }
+
+  .st19 {
+    fill: none;
+    stroke: #9D9FA2;
+    stroke-width: 0.2;
+  }
+
+  .st20 {
+    font-size: 10px;
+  }
+
+  .st21 {
+    fill: none;
+    stroke: #77787B;
+    stroke-width: 1.5;
+  }
+
+  .st22 {
+     fill: #E31837;
+  }
+
+  .st23 {
+    font-size: 12.5145px;
+  }
+
+  .st24 {
+    fill: #E24301;
+  }
+}
