--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -100,7 +100,21 @@ a {
   }
 }
 
+// These are from the SVG conversion for the Z-score charts.  I'm gradually
+// converting the `st...` to more meaningful names.
 svg.z-score {
+  &.boys {
+    .gender {
+      fill: #0297D6;
+    }
+  }
+
+  &.girls {
+    .gender {
+      fill: #E37EB3;
+    }
+  }
+
   .st0 {
     fill: #231F20;
   }
@@ -148,10 +162,6 @@ svg.z-score {
     fill: none;
     stroke: #77787B;
     stroke-width: 0.8;
-  }
-
-  .st11 {
-    fill: #0297D6;
   }
 
   .st12 {
