Use some more descriptive CSS names.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -115,23 +115,23 @@ svg.z-score {
     }
   }
 
-  .st0 {
+  .z-score-frame {
     fill: #231F20;
   }
 
-  .st1 {
+  .z-score-semibold {
     font-family: 'Nunito-SemiBold';
   }
 
-  .st2 {
+  .z-score-font-sm {
     font-size: 9.5px;
   }
 
-  .st3 {
+  .z-score-grey {
     fill: #424242;
   }
 
-  .st4 {
+  .z-score-black {
     fill: #FFFFFF;
   }
 
