Plot actual height-for-age and weight-for-age data.
Still needs to be prettified.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -155,7 +155,7 @@ svg.z-score {
     fill: #00853F;
   }
 
-  .st10 {
+  .month-line {
     fill: none;
     stroke: #77787B;
     stroke-width: 0.8;
@@ -201,7 +201,7 @@ svg.z-score {
     font-size: 10px;
   }
 
-  .st21 {
+  .year-line {
     fill: none;
     stroke: #77787B;
     stroke-width: 1.5;
