--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -104,18 +104,30 @@ a {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $color-background;
-
-  &.active {
-    background-color: $color-primary;
-  }
+  border-radius: 50%;
 
   &.mother {
     background: url(#{$img-path}icon-mother-grey.svg) no-repeat center;
+    background-color: $color-background;
+    background-size: 62% 62%;
+
+    &.active {
+      background: url(#{$img-path}icon-mother-white.svg) no-repeat center;
+      background-color: $color-primary;
+      background-size: 62% 62%;
+    }
   }
 
   &.child {
     background: url(#{$img-path}icon-baby-grey.svg) no-repeat center;
+    background-color: $color-background;
+    background-size: 75% 75%;
+
+    &.active {
+      background: url(#{$img-path}icon-baby-white.svg) no-repeat center;
+      background-color: $color-primary;
+      background-size: 75% 75%;
+    }
   }
 }
 
