--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -5,3 +5,6 @@
 
 // These are additional things not provided by the designer.
 @import "app";
+
+// Things for the progress report.
+@import "report";
