Supply reference data.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -272,6 +272,11 @@ svg.z-score {
      fill: #E31837;
   }
 
+  .three-line-new {
+    stroke: yellow;
+    opacity: 50%;
+  }
+
   .st23 {
     font-size: 12.5145px;
   }
