Remove fill, and draw SD3neg from tables.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -273,8 +273,8 @@ svg.z-score {
   }
 
   .three-line-new {
-    stroke: yellow;
-    opacity: 50%;
+    stroke: black;
+    fill: none;
   }
 
   .st23 {
