Draw more of the lines from the tables.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -277,6 +277,21 @@ svg.z-score {
     fill: none;
   }
 
+  .two-line-new {
+    stroke: #E31837;
+    fill: none;
+  }
+
+  .one-line-new {
+    stroke: #E24301;
+    fill: none;
+  }
+
+  .zero-line-new {
+    stroke: #00853F;
+    fill: none;
+  }
+
   .st23 {
     font-size: 12.5145px;
   }
