--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -181,11 +181,6 @@ svg.z-score {
     fill: #FFFFFF;
   }
 
-  .zero-to-neg-two {
-    opacity: 0.5;
-    fill: #00853F;
-  }
-
   .neg-two-to-neg-three {
     opacity: 0.5;
     fill: #F9E100;
@@ -196,7 +191,7 @@ svg.z-score {
     fill: #E31837;
   }
 
-  .above-zero {
+  .above-neg-two {
     opacity: 0.5;
     fill: #00853F;
   }
