Adjust progress report markup for separate page.

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -141,6 +141,11 @@ svg.z-score {
   }
 }
 
+.page-report {
+  background: #333;
+  padding: 30px;
+}
+
 .wrap-report {
   max-width: 1215px;
   margin: 0 auto 30px auto;
