Fix centering of title and subtitle.

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -158,7 +158,7 @@ svg.z-score {
     height: 27px;
     display: block;
     background: url(#{$img-path}icon-back-dark.svg);
-    float: left;
+    position: absolute;
     background-size: 34px 27px;
   }
 
