Generalize the marshalling of the values for the progress report.

--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -169,6 +169,11 @@ svg.z-score {
   padding: 30px;
 }
 
+.image-report {
+  margin-left: -30px;
+  margin-right: -30px;
+}
+
 .wrap-report {
   max-width: 1215px;
   margin: 0 auto 30px auto;
