--- a/client/src/assets/scss/_report.scss
+++ b/client/src/assets/scss/_report.scss
@@ -206,6 +206,8 @@ svg.z-score {
     line-height: 1.1;
     margin-top: 45px;
     margin-bottom: 45px;
+    border-right-style: none;
+    border-bottom-style: none;
   }
 
   .ui.table th {
@@ -230,6 +232,12 @@ svg.z-score {
     color: #666;
     padding: 11px 13px;
     font-size: 1.72rem;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-right-width: 1px;
+    border-right-style: solid;
+    border-left-style: none;
+    border-top-style: none;
   }
 
   .ui.table tr td.first {
