Only show rounded icon on activities pages.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -122,7 +122,10 @@ a {
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+
+  &.rounded {
+    border-radius: 50%;
+  }
 
   &.mother {
     background: url(#{$img-path}icon-mother-grey.svg) no-repeat center;
