--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -3,6 +3,7 @@
 $color-primary:    #06b9ff;
 $color-text:       #808080;
 $color-background: #ccc;
+$color-dark-background: #808080;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
