Make task icon backgrounds darker.

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -352,7 +352,7 @@ h3.ui.header {
 .icon-task {
   width: 122px;
   height: 122px;
-  background-color: $color-background;
+  background-color: $color-dark-background;
   background-repeat: no-repeat;
   background-position: center center;
   display: block;
