Show dates of future sessions.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -15,6 +15,10 @@ a {
   cursor: pointer;
 }
 
+.admin-page table {
+  font-size: 1.2rem !important;
+}
+
 .ui.logout.button {
   background: $color-dark-background;
 }
