Display admin page in more compact manner.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -15,8 +15,14 @@ a {
   cursor: pointer;
 }
 
-.admin-page table {
-  font-size: 1.2rem !important;
+.admin-page {
+  table {
+    font-size: 1.2rem !important;
+  }
+
+  h2 {
+    margin-top: 1.0rem;
+  }
 }
 
 .ui.logout.button {
