--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Variables
 
 $color-primary:    #06b9ff;
+$color-secondary:  #0273B2;
 $color-text:       #808080;
 $color-background: #ccc;
 $color-dark-background: #808080;
