--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -408,6 +408,16 @@ h3.ui.header {
   background-size: 88px 80px;
 }
 
+// Tasks horizontal scroll
+
+.ui.task.segment {
+  overflow-y: auto;
+
+  .grid {
+    white-space: nowrap;
+    flex-wrap: nowrap;
+  }
+}
 
 // Participants (Horizontal Scroll Area)
 
