Avoid overlapping text in activity icons.

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -953,6 +953,7 @@ input::placeholder {
   display: block;
   text-align: center;
   color: $color-text;
+  white-space: normal;
 
   &:hover {
     color: inherit;
