Just scroll the body of the form.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -180,7 +180,7 @@ a {
   background: #fff;
   border-top: 9px solid #06b9ff;
   padding: 30px;
-  overflow-y: scroll;
+  position: relative;
 
   .icon-back {
     width: 34px;
