Float the completion checkmark to the right, so it is aligned.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -15,6 +15,10 @@ a {
   cursor: pointer;
 }
 
+.consent-form-list {
+  color: $color-text;
+}
+
 .admin-page {
   table {
     font-size: 1.2rem !important;
