Tweak font sizes and spacing.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -189,6 +189,7 @@ a {
 
   .form-title {
     flex: initial;
+    margin-bottom: 12px;
   }
 
   .form-body {
@@ -197,6 +198,7 @@ a {
   }
 
   .actions {
+    margin-top: 24px;
     flex: initial;
   }
 
