Show that language links are clickable.

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -43,6 +43,7 @@ a {
       height: 27px;
       color: white;
       font-size: .8em;
+      cursor: pointer;
 
       a {
         display: block;
