--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -28,7 +28,7 @@ a {
 
   .links-translate {
     margin: 0;
-    padding: 0 25px;
+    padding: 6px 25px;
     list-style: none;
     display: flex;
     justify-content: flex-end;
