--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -31,7 +31,7 @@ a {
     padding: 6px 25px;
     list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 
     li {
       display: inline-block;
