--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -31,11 +31,11 @@ a {
     padding: 6px 25px;
     list-style: none;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 
     li {
       display: inline-block;
-      margin-left: 15px;
+      margin-right: 15px;
       position: relative;
       display: flex;
       height: 27px;
