Show which version of the app is active.

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -25,6 +25,15 @@ a {
   width: 800px;
   text-align: right;
   margin: 10px auto;
+  display: flex;
+  justify-content: space-between;
+
+  .version {
+    margin-right: 16px;
+    height: 24px;
+    color: white;
+    font-size: .6em;
+  }
 
   .links-translate {
     margin: 0;
@@ -69,7 +78,6 @@ a {
       top: -4px;
       left: -4px;
     }
-
   }
 }
 
