Serve fonts locally, to make it easier to pre-cache them.

--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -3,6 +3,9 @@
 
 @import "custom";
 
+// Locally-hosted google fonts
+@import "fonts";
+
 // These are additional things not provided by the designer.
 @import "app";
 
