Add 'Gender' and 'Level of education' inputs [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -682,7 +682,8 @@ h3.ui.header {
   }
 
   input,
-  input:focus {
+  input:focus,
+  .select-input {
     background: none;
     font-size: 2rem;
     border: 2px solid $color-gray;
