Step 3 - partial [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -678,6 +678,13 @@ h3.ui.header {
 
 .ui.form.registration {
 
+  .separator-line {
+    border-top: 2px solid $color-gray;
+    width: 620px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+  }
+
   .ui.grid.photo {
     margin-top: 20px;
   }
