--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -7,6 +7,7 @@ $color-background: #ccc;
 $color-dark-background: #808080;
 $color-dark-blue: #00374f;
 $color-gray:       #b1b1b1;
+$color-red:        #ff0000;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
