--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -744,26 +744,45 @@ h3.ui.header {
     }
   }
 
-  .select-day-input,
-  .select-month-input {
-    width: 100px;
+  .birtdate-label {
+    margin-top: 45px;
   }
 
-  .select-year-input {
-    width: 120px;
+  .day-input,
+  .month-input {
+    text-align: center;
+
+    span {
+      font-size: 15px;
+    }
+
+    select {
+      width: 100px;
+    }
   }
 
-  .estimated {
-    margin-top: -26px;
+  .year-input {
+    text-align: center;
 
+    span {
+      font-size: 15px;
+    }
+
+    select {
+      width: 120px;
+    }
+  }
+
+  .estimated-input {
     span {
       font-size: 15px;
       margin-left: 30px;
     }
 
     input {
-      width: 30px;
-      margin-left: 50px;
+      width: 35px;
+      margin-left: 45px;
+      margin-top: 5px;
     }
   }
 
