Replace gender checkboxes with radio buttons + align

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -773,6 +773,10 @@ h3.ui.header {
     }
   }
 
+  .gender-input {
+    margin-left: 15px;
+  }
+
   .estimated-input {
     span {
       font-size: 15px;
