--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -676,6 +676,13 @@ h3.ui.header {
   width: 50%;
 }
 
+.ui.form.search input,
+.ui.form.search input:focus {
+  margin-bottom: 30px;
+  text-align: left;
+  width: 100%;
+}
+
 .ui.form.registration {
 
   .separator-line {
