--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -670,17 +670,51 @@ h3.ui.header {
   color: $color-text;
 }
 
-.registration-form.actions button {
-  float: left;
-  margin: 0;
-  width: 50%;
-}
+.patients-search {
 
-.ui.form.search input,
-.ui.form.search input:focus {
-  margin-bottom: 30px;
-  text-align: left;
-  width: 100%;
+  .ui.form.search input,
+  .ui.form.search input:focus {
+    margin-bottom: 30px;
+    text-align: left;
+    width: 100%;
+  }
+
+  .results-summary {
+    margin-top: 30px;
+    margin-bottom: 15px;
+  }
+
+  .items.search-results {
+    color: $color-gray;
+    height: 600px;
+    margin-bottom: 50px;
+    overflow-y: auto;
+
+    .item .content {
+
+      .ui.header {
+        margin-top: 3px;
+        margin-bottom: 7px;
+      }
+
+      p {
+        margin-bottom: 0;
+        font-size: 20px;
+
+        label {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+
+  .register-helper {
+    margin-bottom: 10px;
+  }
+
+  .button.register-button {
+    width: 100%;
+  }
 }
 
 .ui.form.registration {
@@ -802,6 +836,12 @@ h3.ui.header {
     margin-left: -20px;
     padding-right: 10px;
   }
+}
+
+.registration-form.actions button {
+  float: left;
+  margin: 0;
+  width: 50%;
 }
 
 input::placeholder {
