--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -692,17 +692,51 @@ h3.ui.header {
 
     .item .content {
 
-      .ui.header {
-        margin-top: 3px;
-        margin-bottom: 7px;
+      .details {
+        float:left;
+        width: 70%;
+
+        .ui.header {
+          color: $color-gray;
+          font-size: 24px;
+          font-weight: bold;
+          margin-top: 3px;
+          margin-bottom: 7px;
+        }
+
+        p {
+          margin-bottom: 0;
+          font-size: 20px;
+
+          label {
+            font-weight: bold;
+          }
+        }
       }
 
-      p {
-        margin-bottom: 0;
-        font-size: 20px;
+      .action {
+        float:left;
+        margin-top: -20px;
+        width: 20%;
 
-        label {
-          font-weight: bold;
+        .action-icon-wrapper {
+          height: 50px;
+          border: 2px solid gray;
+          border-radius: 28px;
+          width: 50px;
+          margin-top: 60px;
+          margin-left: 50px;
+
+          .action-icon {
+            background: url(#{$img-path}icon-forward.svg) no-repeat center;
+            background-size: 62% 62%;
+            cursor: pointer;
+            display: block;
+            height: 40px;
+            width: 40px;
+            margin-left: 2px;
+            margin-top: 2px;
+          }
         }
       }
     }
