--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -688,9 +688,47 @@ h3.ui.header {
     color: $color-gray;
     margin-bottom: 50px;
     overflow-y: auto;
+    overflow-x: hidden;
 
     &.results {
       height: 600px;
+    }
+
+    &.family {
+      height: 600px;
+
+      .icon-participant.add {
+        background-color: white;
+        border: 2px dashed $color-gray;
+        height: 120px;
+        width: 120px;
+      }
+
+      .add-patient-label {
+        font-weight: bold;
+        margin-top: 35px;
+        padding-left: 30px;
+      }
+
+      .add-patient-icon-wrapper {
+        height: 50px;
+        border: 2px solid gray;
+        border-radius: 28px;
+        width: 50px;
+        margin-top: 30px;
+        margin-left: 25px;
+
+        .add-patient-icon {
+          background: url(#{$img-path}icon-add.svg) no-repeat center;
+          background-size: 62% 62%;
+          cursor: pointer;
+          display: block;
+          height: 40px;
+          width: 40px;
+          margin-left: 2px;
+          margin-top: 2px;
+        }
+      }
     }
 
     .item .content {
@@ -761,39 +799,9 @@ h3.ui.header {
   margin-bottom: 70px;
 }
 
+
+
 .ui.form.registration {
-
-  .icon-participant.mother {
-    background-color: white;
-    border: 2px dashed $color-gray;
-    margin-top: 25px;
-    height: 120px;
-    width: 120px;
-  }
-
-  .add-child-label {
-    margin-top: 70px;
-    padding-left: 30px;
-  }
-
-  .add-child-icon-wrapper {
-    height: 50px;
-    border: 2px solid gray;
-    border-radius: 28px;
-    width: 50px;
-    margin-top: 60px;
-    margin-left: 50px;
-
-    .add-child-icon {
-      background: url(#{$img-path}icon-add.svg) no-repeat center;
-      background-size: 62% 62%;
-      display: block;
-      height: 40px;
-      width: 40px;
-      margin-left: 2px;
-      margin-top: 2px;
-    }
-  }
 
   .ui.grid.photo {
     margin-top: 20px;
